# hamr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mkdocs.yml
.github/workflows/: ci.yml  release.yml
config/: config.json  config.schema.json
crates/hamr-cli/src/: main.rs
crates/hamr-core/src/engine/: mod.rs  plugins.rs
crates/hamr-core/src/plugin/: manifest.rs  process.rs
crates/hamr-core/src/search/: engine.rs  searchable.rs
crates/hamr-core/src/tests/: plugin_tests.rs
crates/hamr-gtk/: Cargo.toml
crates/hamr-gtk/src/: colors.rs  config.rs  dmenu.rs  main.rs  niri_blur.rs  styles.rs  themes.rs  window.rs
crates/hamr-gtk/src/widgets/: grid_item.rs  result_grid.rs  result_item.rs  result_list.rs  result_view.rs
crates/hamr-tui/src/: colors.rs  main.rs
crates/hamr-tui/src/render/: ambient.rs  card.rs  error.rs  form.rs  grid_browser.rs  helpers.rs  image_browser.rs  preview.rs  results.rs  window_picker.rs
crates/hamr-tui/src/widgets/: badge.rs  chip.rs  graph.rs
crates/hamr-types/src/: lib.rs
docs/: architecture.md
docs/getting-started/: cli.md  configuration.md  dmenu.md  theming.md
docs/plugins/: index.md  testing.md
docs/templates/: colors.example.json
pkg/aur/: .SRCINFO  PKGBUILD
pkg/aur-bin/: .SRCINFO  PKGBUILD
plugins/: checksums.json
plugins/ai/: config.json  handler.py  manifest.json
plugins/apps/: handler.py
plugins/bitwarden/: handler.py
plugins/color/: handler.py  manifest.json
plugins/cron/: handler.py  manifest.json
plugins/devtools/: handler.py  manifest.json
plugins/kaomoji/: handler.py  manifest.json
plugins/kill/: handler.py  manifest.json
plugins/killproc/: handler.py  manifest.json
plugins/morse/: handler.py  manifest.json
plugins/passgen/: handler.py  manifest.json
plugins/qrcode/: handler.py  manifest.json
plugins/random/: handler.py  manifest.json
plugins/roman/: handler.py  manifest.json
plugins/settings/: handler.py
plugins/ssh/: handler.py  manifest.json
plugins/sysinfo/: handler.py  manifest.json
plugins/translate/: handler.py  manifest.json
plugins/unicode/: handler.py  manifest.json
plugins/units/: handler.py  manifest.json
plugins/weather/: handler.py  manifest.json
plugins/websearch/: handler.py  manifest.json
plugins/worldclock/: handler.py  manifest.json
plugins/zoxide/: handler.py
rust/v1.0.0/: 404.html  index.html  sitemap.xml
rust/v1.0.0/architecture/: index.html
rust/v1.0.0/features/: index.html
rust/v1.0.0/getting-started/cli/: index.html
rust/v1.0.0/getting-started/configuration/: index.html
rust/v1.0.0/getting-started/dmenu/: index.html
rust/v1.0.0/getting-started/installation/: index.html
rust/v1.0.0/getting-started/logging/: index.html
rust/v1.0.0/getting-started/theming/: index.html
rust/v1.0.0/getting-started/troubleshooting/: index.html
rust/v1.0.0/plugin-protocol/: index.html
rust/v1.0.0/plugins/: index.html
rust/v1.0.0/search/: search_index.json
scripts/: dev-install.sh  smoke-test-plugins.sh  test-plugin-logic.py
(+9 files in other folders)
